--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,8 @@
 <main>
   <app-header></app-header>
   <body>
-    <p>main works!</p>
+  <section class="intro">
+    <h1 class="intro__slogan">Образовательная платформа Summer Library</h1>
+  </section>
   </body>
-  <app-footer></app-footer>
 </main>
