--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header__inner">
     <div class="header__logo">
-      <a href="#">
+      <a routerLink="/main">
         <svg width="50" height="45" viewBox="0 0 76 71" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M16.4671 70.6464C7.38524 70.6464 0 63.2611 0 54.1793C0 45.0974 7.38524 37.7122 16.4671 37.7122C25.549 37.7122 32.9342 45.0974 32.9342 54.1793C32.9342 63.311 25.549 70.6464 16.4671 70.6464Z"
@@ -17,7 +17,7 @@
     </div>
     <ul class="header__links">
       <li class="header__link">
-        <a href="#">
+        <a routerLink="/catalog">
           <svg width="16" height="13" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect x="1" y="1.51392" width="18" height="4.99717" rx="1" stroke="#00093C" stroke-width="2"/>
             <rect x="1" y="10.4858" width="18" height="5" rx="1" stroke="#00093C" stroke-width="2"/>
@@ -25,11 +25,11 @@
           Каталог
         </a>
       </li>
-      <li class="header__link"><a href="#">Игры</a></li>
+      <li class="header__link"><a routerLink="/games">Игры</a></li>
     </ul>
     <ul class="header__buttons">
-      <li class="header__button"><a href="#" class="button">Войти</a></li>
-      <li class="header__button"><a href="#" class="button">Зарегистрироваться</a></li>
+      <li class="header__button"><a class="button" routerLink="/user/login">Войти</a></li>
+      <li class="header__button"><a class="button" routerLink="/user/register">Зарегистрироваться</a></li>
     </ul>
   </div>
 </header>
