--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -6,14 +6,15 @@
   border-bottom: 1px solid $dark-blue;
 
   &__inner {
-    max-width: 1200px;
-    min-width: 400px;
+    max-width: $max-width;
+    min-width: $min-width;
     display: flex;
     flex-wrap: wrap;
     min-height: 60px;
     margin: auto;
     align-items: center;
-    justify-content: space-around;
+    padding: $paddings;
+    justify-content: space-between;
   }
 
   &__logo a {
