--- a/src/stylesheet/global.scss
+++ b/src/stylesheet/global.scss
@@ -36,6 +36,7 @@ a {
 }
 
 .button {
+  display: block;
   padding: 5px 10px;
   background: #fff;
   border-radius: 6px;
@@ -55,5 +56,9 @@ a {
 
   &:hover::before, &:focus::before {
     filter: blur(10px);
+  }
+
+  &:active::before {
+    opacity: 0;
   }
 }
