--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -4,49 +4,9 @@
   <section class="catalog">
     <h2 class="catalog__name">Каталог доступных книг:</h2>
     <ul class="catalog__list">
-      <li class="catalog__item">
+      <li class="catalog__item" *ngFor="let book of books">
         <app-card
-          bookName="Test Book"
-          [cost]="100"
-          description="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur corporis debitis dolorem ducimus eaque eius eos exercitationem explicabo neque, rerum sint vero! A accusantium adipisci aperiam corporis cum cumque debitis delectus dolores eius eos, esse fugit hic impedit in ipsum reprehenderit tempore ullam?"
-          category="Фантастика"
-          link=""
-        ></app-card>
-      </li>
-      <li class="catalog__item">
-        <app-card
-          bookName="Test Book"
-          [cost]="100"
-          description="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur corporis debitis dolorem ducimus eaque eius eos exercitationem explicabo neque, rerum sint vero! A accusantium adipisci aperiam corporis cum cumque debitis delectus dolores eius eos, esse fugit hic impedit in ipsum reprehenderit tempore ullam?"
-          category="Фантастика"
-          link=""
-        ></app-card>
-      </li>
-      <li class="catalog__item">
-        <app-card
-          bookName="Test Book"
-          [cost]="100"
-          description="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur corporis debitis dolorem ducimus eaque eius eos exercitationem explicabo neque, rerum sint vero! A accusantium adipisci aperiam corporis cum cumque debitis delectus dolores eius eos, esse fugit hic impedit in ipsum reprehenderit tempore ullam?"
-          category="Фантастика"
-          link=""
-        ></app-card>
-      </li>
-      <li class="catalog__item">
-        <app-card
-          bookName="Test Book"
-          [cost]="100"
-          description="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur corporis debitis dolorem ducimus eaque eius eos exercitationem explicabo neque, rerum sint vero! A accusantium adipisci aperiam corporis cum cumque debitis delectus dolores eius eos, esse fugit hic impedit in ipsum reprehenderit tempore ullam?"
-          category="Фантастика"
-          link=""
-        ></app-card>
-      </li>
-      <li class="catalog__item">
-        <app-card
-          bookName="Test Book"
-          [cost]="100"
-          description="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur corporis debitis dolorem ducimus eaque eius eos exercitationem explicabo neque, rerum sint vero! A accusantium adipisci aperiam corporis cum cumque debitis delectus dolores eius eos, esse fugit hic impedit in ipsum reprehenderit tempore ullam?"
-          category="Фантастика"
-          link=""
+          [book]="book"
         ></app-card>
       </li>
     </ul>
