Added the user guard

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -26,10 +26,18 @@
         </a>
       </li>
       <li class="header__link"><a routerLink="/games">Игры</a></li>
+      <li class="header__link"><a routerLink="/user/library">Библиотека</a></li>
     </ul>
     <ul class="header__buttons">
-      <li class="header__button"><a class="button" routerLink="/user/login">Войти</a></li>
-      <li class="header__button"><a class="button" routerLink="/user/register">Зарегистрироваться</a></li>
+      <li class="header__button" *ngIf="!user"><button class="button" routerLink="/user/login">Войти</button></li>
+      <li class="header__button" *ngIf="!user"><button class="button" routerLink="/user/register">Зарегистрироваться</button></li>
+      <li class="header__button" *ngIf="user"><a routerLink="/user/info">
+        <svg style="transform: translateY(2px)" width="17" height="17" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect x="5.18024" y="1" width="6.63833" height="8.41108" rx="3.31917" stroke="#00093C" stroke-width="2"/>
+          <path d="M1 15.4111C1 13.7543 2.34315 12.4111 4 12.4111H13.2795C14.9364 12.4111 16.2795 13.7543 16.2795 15.4111V16.3229C16.2795 16.8752 15.8318 17.3229 15.2795 17.3229H2C1.44772 17.3229 1 16.8752 1 16.3229V15.4111Z" stroke="#00093C" stroke-width="2"/>
+        </svg>
+        : {{user.login}}</a></li>
+      <li class="header__button" *ngIf="user">баланс: {{user.balance}}$</li>
     </ul>
   </div>
 </header>
