--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -9,6 +9,7 @@
           bookName="Test Game"
           description="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur corporis debitis dolorem ducimus eaque eius eos exercitationem explicabo neque, rerum sint vero! A accusantium adipisci aperiam corporis cum cumque debitis delectus dolores eius eos, esse fugit hic impedit in ipsum reprehenderit tempore ullam?"
           link=""
+          [user]="user"
         ></app-card>
       </li>
     </ul>
