--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -6,9 +6,9 @@
     <ul class="games__list">
       <li class="games__item">
         <app-card
-          bookName="Test Game"
-          description="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur corporis debitis dolorem ducimus eaque eius eos exercitationem explicabo neque, rerum sint vero! A accusantium adipisci aperiam corporis cum cumque debitis delectus dolores eius eos, esse fugit hic impedit in ipsum reprehenderit tempore ullam?"
-          link=""
+          bookName="Снайпер"
+          description="Лопайте летающие шарики!"
+          link="sniper"
           [user]="user"
         ></app-card>
       </li>
