--- a/src/app/user/favourites/card/card.component.scss
+++ b/src/app/user/favourites/card/card.component.scss
@@ -5,7 +5,7 @@
   width: 320px;
 
   border-radius: 15px;
-  background-color: #DDDDFF;
+  background-color: #FFEEF6;
 
   &__name {
     margin: 0;
