--- a/src/app/catalog/card/card.component.html
+++ b/src/app/catalog/card/card.component.html
@@ -22,6 +22,8 @@
   <div class="card__buy">
     <p class="card__cost">{{book.cost}}$</p>
     <button *ngIf="user; else unauth" (click)="buy()" class="card__link button">Купить</button>
+    <button *ngIf="user && !favourite" (click)="add()" class="card__link button">Нравится</button>
+    <button *ngIf="user && favourite" (click)="remove()" class="card__link button">Не нравится</button>
     <ng-template #unauth>
       <p class="card__message">Для взаимодействия, авторизуйтесь</p>
     </ng-template>
