Done the games part

--- a/src/app/games/card/card.component.html
+++ b/src/app/games/card/card.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="card__buy">
     <a
-      (click)="play()"
+      routerLink="sniper"
       *ngIf="user;else unauth"
       class="card__link button"
     >Играть</a>
