--- a/src/app/games/sniper/sniper.component.scss
+++ b/src/app/games/sniper/sniper.component.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
 
   &__name {
+    margin: 10px 0 5px 0;
     font-size: 32px;
   }
 
@@ -18,5 +19,13 @@
     height: 500px;
     border: 1px solid black;
     border-radius: 12px;
+  }
+
+  &__score {
+    margin: 0 0 5px 0;
+  }
+
+  .button {
+    margin-top: 30px;
   }
 }
